--- a/package.json
+++ b/package.json
@@ -10,12 +10,46 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
+    "@expo-google-fonts/poppins": "^0.2.2",
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-mapbox-gl/maps": "^8.6.0-beta.0",
+    "@react-native-picker/picker": "2.2.1",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.1",
+    "axios": "^0.26.1",
+    "expo": "^44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-constants": "~13.0.1",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-google-sign-in": "~10.1.0",
+    "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
+    "formik": "^2.2.9",
+    "npm": "^8.6.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-maps": "^0.29.4",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-web": "0.17.1",
+    "stream-chat-expo": "^4.3.1",
+    "styled-components": "^5.3.5",
+    "@react-native-community/netinfo": "7.1.3",
+    "expo-document-picker": "~10.1.3",
+    "expo-file-system": "~13.1.4",
+    "expo-haptics": "~11.1.0",
+    "expo-image-manipulator": "~10.2.0",
+    "expo-image-picker": "~12.0.1",
+    "expo-media-library": "~14.0.0",
+    "expo-sharing": "~10.1.0",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-svg": "12.1.1",
+    "expo-updates": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
